tests/tc/pos/union03.js

/*@ foo5 ::  ({v:number|v>0}) => {v:number| 2 <= v} */
function foo5(x) {
  return x;
}

